# mini-vllm

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/results/: bench-20260611-001717.csv  bench-20260611-001717.json  bench-20260611-212354.csv  bench-20260611-212354.json  bench-20260612-153736.csv  bench-20260612-153736.json  bench-20260612-153924.csv  bench-20260612-153924.json
docs/: api.md  architecture.md  batching.md  demo_script.md  demo_video.md  gpu.md  kv_cache.md  paged_kv_cache.md  screenshots.md  writeup-kv-cache-and-continuous-batching.md
examples/: prompts.json  traffic.json
experiments/: tensor_parallel.py
scripts/: make_screenshots.py  make_video.sh
scripts/video/: record.js
scripts/video/cards/: api.html  batching.html  bench.html  closing.html  title.html
src/mini_vllm/: cli.py  config.py
src/mini_vllm/benchmark/: report.py  runner.py
src/mini_vllm/dashboard/static/: app.js  index.html  style.css
src/mini_vllm/engine/: __init__.py  batching.py  cache_backend.py  generation.py  kv_cache.py  model_loader.py  quantize.py  sampling.py  scheduler.py  speculative.py  tokenizer.py
src/mini_vllm/metrics/: __init__.py  collector.py  storage.py
src/mini_vllm/server/: app.py  routes.py  schemas.py  streaming.py
src/mini_vllm/utils/: device.py  logging.py  timing.py
tests/: conftest.py  test_api.py  test_benchmark.py  test_generation.py  test_paged_cache.py  test_prefix_cache.py  test_quantize.py  test_sampling.py  test_scheduler.py  test_speculative.py  test_tensor_parallel.py  test_tokenizer.py
