[project]
name = "mini-vllm"
version = "0.1.0"
description = "An educational LLM inference engine: custom decoding loop, KV cache, continuous batching, streaming, and an OpenAI-compatible API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Olzhas Mukhtarov" }]
keywords = ["llm", "inference", "kv-cache", "batching", "fastapi", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.6",
    "transformers>=4.56,<5",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.8",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.scripts]
mini-vllm = "mini_vllm.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_vllm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# E501: line length is advisory; B008: typer.Option in defaults is the Typer
# idiom; B905: zips in this codebase pair lists built adjacent to each other.
ignore = ["E501", "B008", "B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
